[tool.poetry]
name = "ddw-streamlit-starter-kit"
version = "0.1.0"
description = "A starter kit for building Streamlit apps that connect to data.world's AI Context Engine"
authors = ["data.world"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
